--- a/berichte.html
+++ b/berichte.html
@@ -46,13 +46,13 @@
               <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
               <div class="nav-name">Über uns</div>
             </div>
-          </a>
+          </a><!--
           <a href="aktuelles.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
               <div class="nav-name">Aktuelles</div>
             </div>
-          </a>
+          </a>-->
           <a href="projekte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-book"></i></div>
@@ -67,7 +67,7 @@
 
         </div>
         <div class="sidebar-section">
-          <a href="https://www.youtube.com/">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
               <div class="nav-name">YouTube</div>
@@ -105,13 +105,13 @@
             <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
             <div class="header-change-text">Über uns</div>
           </a>
-        </div>
+        </div><!--
         <div class="change-site">
           <a href="aktuelles.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
             <div class="header-change-text">Aktuelles</div>
           </a>
-        </div>
+        </div>-->
         <div class="change-site">
           <a href="projekte.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-book"></i></div>
@@ -125,7 +125,7 @@
           </div>
         </div>
         <div class="header-socials">
-          <a href="https://www.youtube.com/" class="header-social-link">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w" class="header-social-link">
             <i class="fa-brands fa-youtube"></i>
           </a>
           <a href="links.html" class="header-social-link">
@@ -152,78 +152,117 @@
     <div class="projects-grid">
 
       <div class="project-block">
-        <img src="bilder/bild-platzhalter.png" alt="" class="proj-thumbnail">
-        <h2 class="proj-title">Bericht 1</h2>
+        <img src="bilder/mg-ziegenhof.JPG" alt="" class="proj-thumbnail">
+        <h2 class="proj-title">Bunte Vielfalt statt schlichter Einfalt!</h2>
         <div class="proj-author-date">
-          <div class="proj-side-info">Benedikt Lamberty</div>
-          <div class="proj-side-info">April 2023</div>
+          <div class="proj-side-info">Markus Hartmann</div>
+          <!--<div class="proj-side-info">April 2023</div>-->
         </div>
         <div class="proj-tags">
           <nobr class="proj-tag"><span class="tag-flora"><i class="fa-solid fa-circle"></i></span> Flora</nobr>
           <nobr class="proj-tag"><span class="tag-fauna"><i class="fa-solid fa-circle"></i></span> Fauna</nobr>
           <nobr class="proj-tag"><span class="tag-artenschutz"><i class="fa-solid fa-circle"></i></span> Artenschutz</nobr>
+          <nobr class="proj-tag"><span class="tag-exkursion"><i class="fa-solid fa-circle"></i></span> Exkursion</nobr>
         </div>
         <p class="proj-abstract">
-          Zusammenfassung Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          Kinder- und Jugendgruppe "Mission grün" weitet den Blick. Ziegenhof und
+          Apfelvielfalt bilden den Auftakt für ein buntes Jahresprogramm.
         </p>
         <div class="proj-link">
-          <a href="bericht-platzhalter.html">
+          <a href="docs/art-ziegenhof.pdf" target="_blank">
             <button class="normal-button">
-              <i class="fa-solid fa-file-lines"></i> Zum Bericht
+              <i class="fa-solid fa-file-pdf"></i> Zum Bericht
             </button>
           </a>
         </div>
       </div>
 
       <div class="project-block">
-        <img src="bilder/bild-platzhalter.png" alt="" class="proj-thumbnail">
-        <h2 class="proj-title">Bericht 2</h2>
+        <img src="bilder/mg-martin (11).JPG" alt="" class="proj-thumbnail">
+        <h2 class="proj-title">Selbstgemacht ist am leckersten</h2>
         <div class="proj-author-date">
-          <div class="proj-side-info">Benedikt Lamberty</div>
-          <div class="proj-side-info">April 2023</div>
+          <div class="proj-side-info">Markus Hartmann</div>
         </div>
         <div class="proj-tags">
-          <nobr class="proj-tag"><span class="tag-flora"><i class="fa-solid fa-circle"></i></span> Flora</nobr>
-          <nobr class="proj-tag"><span class="tag-fauna"><i class="fa-solid fa-circle"></i></span> Fauna</nobr>
-          <nobr class="proj-tag"><span class="tag-artenschutz"><i class="fa-solid fa-circle"></i></span> Artenschutz</nobr>
+          <nobr class="proj-tag"><span class="tag-mitmach"><i class="fa-solid fa-circle"></i></span> Mitmachaktion</nobr>
         </div>
         <p class="proj-abstract">
-          Zusammenfassung Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          "mission grün" goes Handwerkskunst und traf sich zum Weckmannbacken. Nachhaltigkeit
+          zu leben, ist das Ziel der Kinder- und Jugendgruppe.
         </p>
         <div class="proj-link">
-          <a class="externer-link-confirm" id="https://www.verbundenanderahr.de/">
+          <a href="docs/mg-martinsmänner.pdf" target="_blank">
             <button class="normal-button">
-              <i class="fa-solid fa-arrow-up-right-from-square"></i> Verbunden an der Ahr
+              <i class="fa-solid fa-file-pdf"></i> Zum Bericht
             </button>
           </a>
         </div>
       </div>
 
       <div class="project-block">
-        <img src="bilder/bild-platzhalter.png" alt="" class="proj-thumbnail">
-        <h2 class="proj-title">Bericht 3</h2>
+        <h2 class="proj-title">Mission Grün erforscht des Landes Krone</h2>
         <div class="proj-author-date">
-          <div class="proj-side-info">Benedikt Lamberty</div>
-          <div class="proj-side-info">April 2023</div>
+          <div class="proj-side-info">Markus Hartmann</div>
         </div>
         <div class="proj-tags">
           <nobr class="proj-tag"><span class="tag-flora"><i class="fa-solid fa-circle"></i></span> Flora</nobr>
           <nobr class="proj-tag"><span class="tag-fauna"><i class="fa-solid fa-circle"></i></span> Fauna</nobr>
           <nobr class="proj-tag"><span class="tag-artenschutz"><i class="fa-solid fa-circle"></i></span> Artenschutz</nobr>
+          <nobr class="proj-tag"><span class="tag-exkursion"><i class="fa-solid fa-circle"></i></span> Exkursion</nobr>
         </div>
         <p class="proj-abstract">
-          Zusammenfassung Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          Kinder- und Jugendgruppe taucht in die besondere Natur der Landskrone ein.
         </p>
         <div class="proj-link">
-          <a class="externer-link-confirm" id="https://github.com/BenediktLamberty/BenediktLamberty.github.io">
+          <a href="docs/art-mg-landskrone.pdf" target="_blank">
             <button class="normal-button">
-              <i class="fa-brands fa-github"></i> Repository
+              <i class="fa-solid fa-file-pdf"></i> Zum Bericht
             </button>
           </a>
         </div>
       </div>
 
+      <div class="project-block">
+        <img src="bilder/art-mg-spende-coc.JPG" alt="" class="proj-thumbnail">
+        <h2 class="proj-title">„Wir sind an Eurer Seite!“</h2>
+        <div class="proj-author-date">
+          <div class="proj-side-info">Markus Hartmann</div>
+        </div>
+        <div class="proj-tags">
+          <nobr class="proj-tag"><span class="tag-spende"><i class="fa-solid fa-circle"></i></span> Spende</nobr>
+        </div>
+        <p class="proj-abstract">
+          Spendenübergabe an die „mission grün“. „Junge Kirche Cochem“ zeigt Solidarität.
+        </p>
+        <div class="proj-link">
+          <a href="docs/art-mg-spende-coc.pdf" target="_blank">
+            <button class="normal-button">
+              <i class="fa-solid fa-file-pdf"></i> Zum Bericht
+            </button>
+          </a>
+        </div>
+      </div>
 
+      <div class="project-block">
+        <h2 class="proj-title">Neustart – aber umso grüner!</h2>
+        <div class="proj-author-date">
+          <div class="proj-side-info">Markus Hartmann</div>
+        </div>
+        <div class="proj-tags">
+          <nobr class="proj-tag"><span class="tag-exkursion"><i class="fa-solid fa-circle"></i></span> Exkursion</nobr>
+        </div>
+        <p class="proj-abstract">
+          Kinder- und Jugendgruppe "Mission grün" nimmt wieder Fahrt auf. Erstes Treffen nach der
+          Flut führte an den Rhein.
+        </p>
+        <div class="proj-link">
+          <a href="docs/art-mission-gruen.pdf" target="_blank">
+            <button class="normal-button">
+              <i class="fa-solid fa-file-pdf"></i> Zum Bericht
+            </button>
+          </a>
+        </div>
+      </div>
       
     </div>
   </main>
