--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
               <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
               <div class="nav-name">Über uns</div>
             </div>
-          </a>
+          </a><!--
           <a href="aktuelles.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
               <div class="nav-name">Aktuelles</div>
             </div>
-          </a>
+          </a>-->
           <a href="projekte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-book"></i></div>
@@ -64,7 +64,7 @@
           </a>
         </div>
         <div class="sidebar-section">
-          <a href="https://www.youtube.com/">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
               <div class="nav-name">YouTube</div>
@@ -102,13 +102,13 @@
             <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
             <div class="header-change-text">Über uns</div>
           </a>
-        </div>
+        </div><!--
         <div class="change-site">
           <a href="aktuelles.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
             <div class="header-change-text">Aktuelles</div>
           </a>
-        </div>
+        </div>-->
         <div class="change-site">
           <a href="projekte.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-book"></i></div>
@@ -122,7 +122,7 @@
           </a>
         </div>
         <div class="header-socials">
-          <a href="https://www.youtube.com/" class="header-social-link">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w" class="header-social-link">
             <i class="fa-brands fa-youtube"></i>
           </a>
           <a href="links.html" class="header-social-link">
@@ -157,7 +157,7 @@
 
     <h2>Aktuelle Veranstaltungen</h2>
     <div class="preview-home-akt">
-      <div><img src="bilder/bild-platzhalter.png" alt=""></div>
+      <div><img src="bilder/naju-1.treffen (36).JPG" alt=""></div>
       <div>
         <h3>Waldquartier bauen</h3>
         <div class="date">ab Mai</div>
@@ -175,6 +175,7 @@
       </div>
     </div>
     <div class="preview-home-akt">
+      <div><img src="bilder/vogelgezwitscher.JPG" alt=""></div>
       <div>
         <h3>Vogelkonzert-Gottesdienst</h3>
         <div class="date">Pfingstmontag, 29. Mai &#183; 6:00 Uhr</div>
@@ -183,13 +184,10 @@
           genießen wir die Natur und enden bei einer gemeinsamen Brotfeier und mit einem deftigen Frühstück. So starten wir gut in die Pfingstwoche.
           Ort wird noch bekannt gegeben. Fachliche Begleitung: Dr. Thomas Wagner, nabu
         </p>
-        <button class="normal-button">
-          <i class="fa-solid fa-circle-info"></i> mehr Infos
-        </button>
       </div>
     </div>
     <div class="preview-home-akt">
-      <div><img src="bilder/bild-platzhalter.png" alt=""></div>
+      <div><img src="bilder/obstretter.JPG" alt=""></div>
       <div>
         <h3>Obstretteraktion 2023</h3>
         <div class="date">ab Juni</div>
@@ -201,7 +199,7 @@
         </p>
         <a href="kontakt.html">
           <button class="normal-button">
-            <i class="fa-solid fa-circle-info"></i> Kontakt
+            <i class="fa-solid fa-paper-plane"></i> Kontakt
           </button>
         </a>
       </div>
