--- a/links.html
+++ b/links.html
@@ -44,13 +44,13 @@
               <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
               <div class="nav-name">Über uns</div>
             </div>
-          </a>
+          </a><!--
           <a href="aktuelles.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
               <div class="nav-name">Aktuelles</div>
             </div>
-          </a>
+          </a>-->
           <a href="projekte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-book"></i></div>
@@ -65,7 +65,7 @@
           </a>
         </div>
         <div class="sidebar-section">
-          <a href="https://www.youtube.com/">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
               <div class="nav-name">YouTube</div>
@@ -103,13 +103,13 @@
             <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
             <div class="header-change-text">Über uns</div>
           </a>
-        </div>
+        </div><!--
         <div class="change-site">
           <a href="aktuelles.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
             <div class="header-change-text">Aktuelles</div>
           </a>
-        </div>
+        </div>-->
         <div class="change-site">
           <a href="projekte.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-book"></i></div>
@@ -123,7 +123,7 @@
           </a>
         </div>
         <div class="header-socials">
-          <a href="https://www.youtube.com/" class="header-social-link">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w" class="header-social-link">
             <i class="fa-brands fa-youtube"></i>
           </a>
           <div class="header-social-link-active">
@@ -149,7 +149,7 @@
     <h1>Externe Links</h1>
 
     <a id="https://www.nabu.de/" class="preview-home-akt externer-link-confirm">
-      <div class="link-pic"><img src="bilder/bild-platzhalter.png" alt=""></div>
+      <div class="link-pic"><img src="bilder/NABU_1_1.jpg" alt=""></div>
       <div>
         <h3>NABU</h3>
         <div class="date">Naturschutzbund Deutschland e.V</div>
@@ -158,7 +158,7 @@
     </a>
 
     <a id="https://www.pastoraler-raum-bad-neuenahr-ahrweiler.de/" class="preview-home-akt externer-link-confirm">
-      <div class="link-pic"><img src="bilder/bild-platzhalter.png" alt=""></div>
+      <div class="link-pic"><img src="bilder/Wappen_des_Bistums_Trier.png" alt=""></div>
       <div>
         <h3>Pastoraler Raum Bad Neuenahr-Ahrweiler</h3>
         <p>Umfasst die Pfarreien / Pfarreiengemeinschaften Bad Neuenahr-Ahrweiler,
