--- a/projekte.html
+++ b/projekte.html
@@ -46,13 +46,13 @@
               <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
               <div class="nav-name">Über uns</div>
             </div>
-          </a>
+          </a><!--
           <a href="aktuelles.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
               <div class="nav-name">Aktuelles</div>
             </div>
-          </a>
+          </a>-->
           
             <div class="sidebar-subsec-active">
               <div class="nav-icon"><i class="fa-solid fa-book"></i></div>
@@ -67,7 +67,7 @@
           </a>
         </div>
         <div class="sidebar-section">
-          <a href="https://www.youtube.com/">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
               <div class="nav-name">YouTube</div>
@@ -105,13 +105,13 @@
             <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
             <div class="header-change-text">Über uns</div>
           </a>
-        </div>
+        </div><!--
         <div class="change-site">
           <a href="aktuelles.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
             <div class="header-change-text">Aktuelles</div>
           </a>
-        </div>
+        </div>-->
         <div class="change-site-active">
           <div class="header-link-active">
             <div class="header-change-icon"><i class="fa-solid fa-book"></i></div>
@@ -125,7 +125,7 @@
           </a>
         </div>
         <div class="header-socials">
-          <a href="https://www.youtube.com/" class="header-social-link">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w" class="header-social-link">
             <i class="fa-brands fa-youtube"></i>
           </a>
           <a href="links.html" class="header-social-link">
@@ -153,9 +153,9 @@
     <div class="projects-grid">
 
       <div class="project-block">
-        <div class="proj-video-container">
+        <!--<div class="proj-video-container">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/g4FovhkD6f0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
+        </div>-->
         <h2 class="proj-title">Video-Projekt 1</h2>
         <!--
         <div class="proj-author-date">
@@ -173,11 +173,11 @@
           bedacht wurden.
         </p>
         <div class="proj-link">
-          <a class="externer-link-confirm" id="https://www.youtube.com/watch?v=g4FovhkD6f0">
+          <!--<a class="externer-link-confirm" id="url---">-->
             <button class="normal-button">
-              <i class="fa-brands fa-youtube"></i> YouTube
+              <i class="fa-solid fa-circle-xmark"></i> Derzeit nicht verfügbar
             </button>
-          </a>
+          <!--</a>-->
         </div>
       </div>
 <!--
