--- a/about.html
+++ b/about.html
@@ -44,13 +44,14 @@
             <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
             <div class="nav-name">Über uns</div>
           </div>
-
+<!--
           <a href="aktuelles.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
               <div class="nav-name">Aktuelles</div>
             </div>
           </a>
+        -->
           <a href="projekte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-book"></i></div>
@@ -65,7 +66,7 @@
           </a>
         </div>
         <div class="sidebar-section">
-          <a href="https://www.youtube.com/">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
               <div class="nav-name">YouTube</div>
@@ -103,13 +104,13 @@
             <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
             <div class="header-change-text">Über uns</div>
           </div>
-        </div>
+        </div><!--
         <div class="change-site">
           <a href="aktuelles.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
             <div class="header-change-text">Aktuelles</div>
           </a>
-        </div>
+        </div>-->
         <div class="change-site">
           <a href="projekte.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-book"></i></div>
@@ -123,7 +124,7 @@
           </a>
         </div>
         <div class="header-socials">
-          <a href="https://www.youtube.com/" class="header-social-link">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w" class="header-social-link">
             <i class="fa-brands fa-youtube"></i>
           </a>
           <a href="links.html" class="header-social-link">
@@ -148,7 +149,7 @@
   <main>
     <h1>Mission Grün &#8212; Wer sind wir?</h1>
 
-    <img src="bilder/gruppenfoto-platzhalter.webp" alt="" class="about-foto1">
+    <img src="bilder/mg-ziegenhof-breit.JPG" alt="" class="about-foto1">
 
     <h2>Was wir so tun</h2>
     <p>
