--- a/kontakt.html
+++ b/kontakt.html
@@ -45,13 +45,13 @@
               <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
               <div class="nav-name">Über uns</div>
             </div>
-          </a>
+          </a><!--
           <a href="aktuelles.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
               <div class="nav-name">Aktuelles</div>
             </div>
-          </a>
+          </a>-->
           <a href="projekte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-book"></i></div>
@@ -66,7 +66,7 @@
           </a>
         </div>
         <div class="sidebar-section">
-          <a href="https://www.youtube.com/">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
               <div class="nav-name">YouTube</div>
@@ -104,13 +104,13 @@
             <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
             <div class="header-change-text">Über uns</div>
           </a>
-        </div>
+        </div><!--
         <div class="change-site">
           <a href="aktuelles.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
             <div class="header-change-text">Aktuelles</div>
           </a>
-        </div>
+        </div>-->
         <div class="change-site">
           <a href="projekte.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-book"></i></div>
@@ -124,7 +124,7 @@
           </a>
         </div>
         <div class="header-socials">
-          <a href="https://www.youtube.com/" class="header-social-link">
+          <a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w" class="header-social-link">
             <i class="fa-brands fa-youtube"></i>
           </a>
           <a href="links.html" class="header-social-link">
@@ -152,7 +152,7 @@
     <h2>Mission Grün Leitung</h2>
 
     <div class="preview-home-akt">
-      <div class="link-pic"><img src="bilder/bild-platzhalter.png" alt=""></div>
+      <div class="link-pic"><img src="bilder/platzhalter.png" alt=""></div>
       <div>
         <h3>Markus Hartmann</h3>
 
@@ -167,7 +167,7 @@
 
     <h2>Website</h2>
     <div class="preview-home-akt">
-      <div class="link-pic"><img src="bilder/bild-platzhalter.png" alt=""></div>
+      <div class="link-pic"><img src="bilder/HTML5_logo_and_wordmark.svg.png" alt=""></div>
       <div>
         <h3>Benedikt Lamberty</h3>
 
