--- a/menue.html
+++ b/menue.html
@@ -47,12 +47,12 @@
       <ul class="menue-section menue-border">
         <li><a href="index.html"><div><i class="fa-solid fa-house"></i></div><div>Start</div></a></li>
         <li><a href="about.html"><div><i class="fa-solid fa-people-group"></i></div><div>Über uns</div></a></li>
-        <li><a href="aktuelles.html"><div><i class="fa-solid fa-calendar-days"></i></div><div>Aktuelles</div></a></li>
+        <!--<li><a href="aktuelles.html"><div><i class="fa-solid fa-calendar-days"></i></div><div>Aktuelles</div></a></li>-->
         <li><a href="projekte.html"><div><i class="fa-solid fa-book"></i></div><div>Projekte</div></a></li>
         <li><a href="berichte.html"><div><i class="fa-solid fa-newspaper"></i></div><div>Berichte</div></a></li>
       </ul>
       <ul class="menue-section menue-border">
-        <li><a href=""><div><i class="fa-brands fa-youtube"></i></div><div>YouTube</div></a></li>
+        <li><a href="https://www.youtube.com/channel/UCVECWF7_vAzvb41dhBODy1w"><div><i class="fa-brands fa-youtube"></i></div><div>YouTube</div></a></li>
         <li><a href="links.html"><div><i class="fa-solid fa-arrow-up-right-from-square"></i></div><div>Externe Links</div></a></li>
       </ul>
       <ul class="menue-section">
