--- a/berichte.html
+++ b/berichte.html
@@ -200,6 +200,7 @@
       </div>
 
       <div class="project-block">
+        <img src="bilder/mg-landskrone.JPG" alt="" class="proj-thumbnail">
         <h2 class="proj-title">Mission Grün erforscht des Landes Krone</h2>
         <div class="proj-author-date">
           <div class="proj-side-info">Markus Hartmann</div>
@@ -244,6 +245,7 @@
       </div>
 
       <div class="project-block">
+        <img src="bilder/IMG_1216.JPG" alt="" class="proj-thumbnail">
         <h2 class="proj-title">Neustart – aber umso grüner!</h2>
         <div class="proj-author-date">
           <div class="proj-side-info">Markus Hartmann</div>
